+ Added ability to activate hidden units
This involves a button and combo box in the UnitDisplay extras tab.  This can
be done anytime the unit can be viewed.  It sets the Entity's
acitvateHiddenPhase state, which is sent to the server.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -74,6 +74,7 @@ BoardSelectionDialog.UpdateSize=Update Size
 BoardSelectionDialog.Updating=Updating...
 BoardSelectionDialog.ViewGameBoard=View Game Board*
 BoardSelectionDialog.ViewGameBoardTooltip=<html>Shows a preview of the selected map.<br>  *Note: for generated maps the preview is only a sample<br> and will not be the same as the actual map used.</html>
+BoardView1.ACTIVATING=ACTIVATING
 BoardView1.Active=Active (
 BoardView1.Armor=Armor 
 BoardView1.Artillery=Artillery
@@ -113,6 +114,7 @@ BoardView1.HeavyWoods={0} heavy wood hex(es) in line of sight.\n
 BoardView1.Height=Height 
 BoardView1.HEIGHT=HEIGHT 
 BoardView1.Hex=Hex 
+BoardView1.HIDDEN=HIDDEN
 BoardView1.hit=Hits with {0}. Needs {1} 
 BoardView1.Hover=Hover
 BoardView1.ID=\ ID:
@@ -228,6 +230,8 @@ BoardView1.Tooltip.Bridge={1} <BR>Height: {0}, CF: {2}
 BoardView1.Tooltip.ArtyAutoHint=<FONT SIZE=-2><I>You can show all players&#39;<BR>deployment zones on the board<BR>by pressing {0}.</I></FONT>
 BoardView1.Tooltip.ArtyAutoHeader=Deployment Hex for Players:<BR>
 
+BoardView1.Tooltip.Hidden=<FONT COLOR=RED>Hidden!</FONT>
+BoardView1.Tooltip.HiddenActivating=<FONT COLOR=RED>Hidden unit will activate in the next {0} phase!</FONT>
 
 BombPayloadDialog.FighterBombDesc=Select the number and type of bombs you wish to drop.
 BombPayloadDialog.SquadronBombDesc=<html>Select the number of salvos for each bomb type you wish to drop.<br> The number in parenthesis represents the number of bombs that will be dropped.</html>
@@ -1023,6 +1027,10 @@ LOSDialog.NonMech=Non-mech
 LOSDialog.title=LOS tool settings
 MapDimensionsDialog.MapDimensions=Map Dimensions
 MechDisplay.0=Ammo
+MechDisplay.ActivateHidden.Label=Activate Hidden Unit
+MechDisplay.ActivateHidden.ToolTip=<html>This button is used to activate hidden units,<br> which will become active for the selected phase.<br>  See TW pg 259.</html>
+MechDisplay.ActivateHiddenPhase.ToolTip=The phase in which this unit will activate for.
+MechDisplay.ActivateHidden.StopActivating=Stop Activating
 MechDisplay.AffectedBy=Affected By:
 MechDisplay.AllEquipment=All Equipment
 MechDisplay.AllWeapons=All Weapons
