+ Added support for TW rules for detecting hidden units

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -1058,3 +1058,5 @@
 9923=<font color='C00000'><B>fails</B></font>!
 
 9940=<data> deals <data> damage to every target in the hex!
+
+9960=<data> (<data>) detects a hidden unit in hex <data>!
