--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -1060,3 +1060,5 @@
 9940=<data> deals <data> damage to every target in the hex!
 
 9960=<data> (<data>) detects a hidden unit in hex <data>!
+9961=Hidden unit <data> (<data>) prevents <data> (<data>) from entering hex <data>!
+9962=<data> (<data>) was unable to enter hex <data> because it would create a stacking violation with a hidden unit, movement ended!
