--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2398,5 +2398,7 @@ BotConfigDialog.princessHelpButtonCaption=Help
 BotConfigDialog.princessHelpPath=docs/help/en/PrincessBotDocumentation.html
 BotConfigDialog.princessHelp.title=Princess Help
 
+StatusBarPhaseDisplay.pointblankShot=Pointblank shot from a hidden unit!
+
 SavePrincessDialog.question=Save changes to this configuration?
 SavePrincessDialog.saveTargets=Save strategic targets list?
