+ Bug: Server appears unresponsive during a client feedback request
The server blocks on the cfrPacketQueue while waiting for a feedback request,
and any non-CFR packets are just queued for processing after the CFR is
complete.  This means that clients connecting/disconnecting and players
sending chat messages will not be processed until after the CFR is complete.
To get around this, I've partitioned the packets into three categories:
CFR packets, which are enqueued into the cfrPacketQueue, regular packets
which are enqueued into the packetQueue, and packets that should be processed
immediately by the connection listener.  These packets include things related
to connecting/disconnecting and chat.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -16,6 +16,7 @@ v0.41.15-git
 + Data: New Sprites and Unit Fixes.
 + Issue #6: Issues with path separators for boards
 + Bug: CustomUnitDialog was using Entity's TL for verification, not game TL
++ Bug: Server appears unresponsive during a client feedback request
 
 v0.41.14 (2016-02-02 13:10 UTC)
 + Data New Sprites/Various RAT and Unit Fixes.
