+ Issue #33: Princess Fails to Deploy

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.41.15-git
 + Bug: Server appears unresponsive during a client feedback request
 + Issue #31: Ejected Vehicle Crews Should Count as Crippled
 + Bug: Quirks could not be assigned to melee weapons
++ Issue #33: Princess Fails to Deploy
 
 v0.41.14 (2016-02-02 13:10 UTC)
 + Data New Sprites/Various RAT and Unit Fixes.
