--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -21,6 +21,7 @@ v0.41.15-git
 + Bug: Quirks could not be assigned to melee weapons
 + Issue #33: Princess Fails to Deploy
 + Data: Quirk Fixes, New Sprites, TP Epsilon Eridani Units
++ Bug: Custom saved weapon quirks used wrong weapon name
 
 v0.41.14 (2016-02-02 13:10 UTC)
 + Data New Sprites/Various RAT and Unit Fixes.
