+ Added multiple font colors, button default/disabled/activated colors can now be specified
SkinSpecifications now have a list of colors, instead of one.  Updated the code
to read/write this list of colors.  MegaMekButtons will now use the first entry
as the default button text color, the second entry as the disabled text color
and the third color will be the activated color.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2119,6 +2119,8 @@ SkinEditor.SkinEditorDialog.Title=Skin Specification Editor
 SkinEditor.Add=Add
 SkinEditor.AddButtonToolTip=Add another Image
 SkinEditor.AddButton=Add Skin Specification
+SkinEditor.AddColor.Text=+
+SkinEditor.AddColor.ToolTip=Add Color
 SkinEditor.AddCompButton=Add Component
 SkinEditor.AddCompButtonToolTip=Add a new component, which is a string linked to a skin specification.
 SkinEditor.AddCompMsg=Type the name of the component to add
@@ -2138,6 +2140,8 @@ SkinEditor.PathToolTip=<html>Path to an image (relative to {0}). <br/> Click to 
 SkinEditor.RightEdge=Right Edge
 SkinEditor.RemoveButton=x
 SkinEditor.RemoveButtonToolTip=Remove this entry
+SkinEditor.RemoveColor.Text=-
+SkinEditor.RemoveColor.ToolTip=Remove last color
 SkinEditor.RemoveCompButton=Remove Component
 SkinEditorResestSkinButton=Reset skin
 SkinEditor.SaveSkinButton=Save Skin
