--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2143,8 +2143,11 @@ SkinEditor.RemoveButtonToolTip=Remove this entry
 SkinEditor.RemoveColor.Text=-
 SkinEditor.RemoveColor.ToolTip=Remove last color
 SkinEditor.RemoveCompButton=Remove Component
-SkinEditorResestSkinButton=Reset skin
+SkinEditor.RemoveCompButtonToolTip=Removes selected component (defaults cannot be removed)
+SkinEditor.ResestSkinButton=Reset skin
+SkinEditor.ResestSkinButtonToolTip=Resets the current skin to the values saved in the XML file
 SkinEditor.SaveSkinButton=Save Skin
+SkinEditor.SaveSkinButtonToolTip=Write current skin to file (overwrites the XML)
 SkinEditor.ShowScrollBars=Show Scroll Bars
 SkinEditor.ShowScrollBarsToolTip=<html>Determines whether scroll bars will be shown <br/> Generally, this is only useful for the BoardViewBorder component</html>
 SkinEditor.TLC=Top Left Corner
@@ -2152,6 +2155,19 @@ SkinEditor.TRC=Top Right Corner
 SkinEditor.TopEdge=Top Edge
 SkinEditor.Tiled=Tile
 SkinEditor.TiledToolTip=Enabling tiling of image (tiled images are repeated to fill the space)
+
+SkinSpec.DefaultUIElement.Text=Default UI Element
+SkinSpec.DefaultUIElement.Desc=The default UI element, used if no other elements match.
+SkinSpec.DefaultButton.Text=Default Button
+SkinSpec.DefaultButton.Desc=The default UI button, used if no other elements match.
+SkinSpec.BoardView.Text=BoardView
+SkinSpec.BoardView.Desc=Appearance of the board view.
+SkinSpec.PhaseDisplay.Text=PhaseDisplay Panel
+SkinSpec.PhaseDisplay.Desc=Appearance for the button panel below the board view.
+SkinSpec.PhaseDisplayDoneButton.Text=PhaseDisplay Done Button
+SkinSpec.PhaseDisplayDoneButton.Desc=Appearance of the Done button in the phase display.
+SkinSpec.PhaseDisplayButton.Text=Phase Display Buttons
+SkinSpec.PhaseDisplayButton.Desc=Appearance of buttons in the phase display button panel (besides Done button).
 
 GeneralInfoMapSet.LocOstLCT=Server crash! Report a bug, include megameklog.txt
 GeneralInfoMapSet.invalidDesign=Invalid Design
