+ UI Component list now uses SkinSpec.UIComponent
This means that it will list the i18n displayable name, and also has a tool tip
for each component.

--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -136,3 +136,16 @@ Building.BasementOneDeepNormal=Single (normal fall)
 Building.BasementOneDeepNormalInfOnly=Small
 Building.BasementOneDeepHead=Single (head first)
 Building.BasementTwoDeepHead=Double (head First)
+
+SkinSpec.defaultElement.Text=Default UI Element
+SkinSpec.defaultElement.Desc=The default UI element, used if no other elements match.
+SkinSpec.defaultButton.Text=Default Button
+SkinSpec.defaultButton.Desc=The default UI button, used if no other elements match.
+SkinSpec.BoardViewBorder.Text=BoardView
+SkinSpec.BoardViewBorder.Desc=Appearance of the board view.
+SkinSpec.PhaseDisplayBorder.Text=PhaseDisplay Panel
+SkinSpec.PhaseDisplayBorder.Desc=Appearance for the button panel below the board view.
+SkinSpec.PhaseDisplayDoneButton.Text=PhaseDisplay Done Button
+SkinSpec.PhaseDisplayDoneButton.Desc=Appearance of the Done button in the phase display.
+SkinSpec.PhaseDisplayButton.Text=Phase Display Buttons
+SkinSpec.PhaseDisplayButton.Desc=Appearance of buttons in the phase display button panel (besides Done button).
