+ Added skinning for UnitDisplay
I had to update a all of the unitDisplay panels as well as all of the MapSets
to use the UnitDisplaySkinSpecification values instead of hard-coded values.

I then added UnitDisplaySpecPanel, which is a variant of SkinSpecPanel.
SkinSpecEditor was updated to display either SkinSpecPanel or
UnitDisplaySpecPanel based upon what component is selected.

SkinEditorMainGUI now display the UnitDisplay, loads a test entity to display.

Also added support for UnitDisplaySkinSpecification in SkinXMLHandler.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2156,6 +2156,31 @@ SkinEditor.TopEdge=Top Edge
 SkinEditor.Tiled=Tile
 SkinEditor.TiledToolTip=Enabling tiling of image (tiled images are repeated to fill the space)
 
+SkinEditor.TabImages=Tab Images
+SkinEditor.generalTabIdle=General Tab - Idle
+SkinEditor.pilotTabIdle=Pilot Tab - Idle
+SkinEditor.armorTabIdle=Armor Tab - Idle
+SkinEditor.systemsTabIdle=Systems Tab - Idle
+SkinEditor.weaponsTabIdle=Weapons Tab - Idle
+SkinEditor.extrasTabIdle=Extras Tab - Idle
+SkinEditor.generalTabActive=General Tab - Active
+SkinEditor.pilotTabActive=Pilot Tab - Active
+SkinEditor.armorTabActive=Armor Tab - Active
+SkinEditor.systemsTabActive=Systems Tab - Active
+SkinEditor.weaponsTabActive=Weapons Tab - Active
+SkinEditor.extraTabActive=Extra Tab - Active
+SkinEditor.cornerIdle=Corner - Idle
+SkinEditor.cornerActive=Corner - Active
+SkinEditor.backgroundTile=Background Tile
+SkinEditor.topLine=Top Line
+SkinEditor.bottomLine=Bottom Line
+SkinEditor.leftLine=Left Line
+SkinEditor.rightLine=Right Line
+SkinEditor.topLeftCorner=Top Left Corner
+SkinEditor.bottomLeftCorner=Bottom Left Corner
+SkinEditor.topRightCorner=Top Right Corner
+SkinEditor.bottomRightCorner=Bottom Right Corner
+
 GeneralInfoMapSet.LocOstLCT=Server crash! Report a bug, include megameklog.txt
 GeneralInfoMapSet.invalidDesign=Invalid Design
 GeneralInfoMapSet.playerL=Player:
