--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -149,3 +149,5 @@ SkinSpec.PhaseDisplayDoneButton.Text=PhaseDisplay Done Button
 SkinSpec.PhaseDisplayDoneButton.Desc=Appearance of the Done button in the phase display.
 SkinSpec.PhaseDisplayButton.Text=Phase Display Buttons
 SkinSpec.PhaseDisplayButton.Desc=Appearance of buttons in the phase display button panel (besides Done button).
+SkinSpec.UnitDisplay.Text=UnitDisplay
+SkinSpec.UnitDisplay.Desc=Controls the appearance of the unit display.
