+ Missing i18n entry for Mech Outline

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2180,6 +2180,7 @@ SkinEditor.topLeftCorner=Top Left Corner
 SkinEditor.bottomLeftCorner=Bottom Left Corner
 SkinEditor.topRightCorner=Top Right Corner
 SkinEditor.bottomRightCorner=Bottom Right Corner
+SkinEditor.mechOutline=Mech Outline
 
 GeneralInfoMapSet.LocOstLCT=Server crash! Report a bug, include megameklog.txt
 GeneralInfoMapSet.invalidDesign=Invalid Design
