Movement Phase Workflow - Adds a keybind to switch between walking and jumping, default J - The movement envelope is now toggled to permanently on or off - some misc changes to make it more intuitive (like keeping the current movement mode when pressing ESC and others)

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1018,6 +1018,8 @@ KeyBinds.cmdNames.udWeapons=Unit Display Weapon Tab
 KeyBinds.cmdDesc.udWeapons=Selects the Weapon tab on the unit display
 KeyBinds.cmdNames.udExtras=Unit Display Extras Tab
 KeyBinds.cmdDesc.udExtras=Selects the Extras tab on the unit display
+KeyBinds.cmdNames.toggleJump=Toggle Jumping/Walking
+KeyBinds.cmdDesc.toggleJump=Switches between walking and jumping movement modes
 
 LOSDialog.inFirstHex=In first hex:
 LOSDialog.InSecondHex=In second hex:
