New menu entry - allows changing the tileset theme of the current board

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -572,7 +572,9 @@ CommonMenuBar.viewToggleIsometric=Isometric View
 CommonMenuBar.viewToggleFieldOfFire=Field of Fire
 CommonMenuBar.viewToggleFieldOfFireToolTip=Outline firing arcs for selected weapons
 CommonMenuBar.viewToggleFiringSolutions=Firing Solutions
-CommonMenuBar.viewToggleFiringSolutionsToolTip=During the firing phase, to-hit modifiers for each range bracket will be drawn on units 
+CommonMenuBar.viewToggleFiringSolutionsToolTip=During the firing phase, to-hit modifiers for each range bracket will be drawn on units
+CommonMenuBar.viewChangeTheme=Change Tileset Theme
+CommonMenuBar.viewChangeThemeToolTip=Allows changing the theme of the board tileset, e.g. to "grass" or "mars"
 CommonMenuBar.moveLAMmechMode=Transform to mek mode
 CommonMenuBar.moveLAMairmechMode=Transform to airmek mode
 CommonMenuBar.moveLAMaircraftMode=Transform to aerospace fighter mode
