+ Added missing i18n entries
Forgot to add entries for the new ChatLounge skin spec components

--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -143,6 +143,10 @@ SkinSpec.defaultButton.Text=Default Button
 SkinSpec.defaultButton.Desc=The default UI button, used if no other elements match.
 SkinSpec.BoardViewBorder.Text=BoardView
 SkinSpec.BoardViewBorder.Desc=Appearance of the board view.
+SkinSpec.ChatLoungeBorder.Text=Chat Lounge
+SkinSpec.ChatLoungeBorder.Desc=Appearance for the chat lounge.
+SkinSpec.ChatLoungeDoneButton.Text=Chat Lounge Done Button
+SkinSpec.ChatLoungeDoneButton.Desc=Appearance of Done button in the chat lounge
 SkinSpec.PhaseDisplayBorder.Text=PhaseDisplay Panel
 SkinSpec.PhaseDisplayBorder.Desc=Appearance for the button panel below the board view.
 SkinSpec.PhaseDisplayDoneButton.Text=PhaseDisplay Done Button
@@ -150,4 +154,5 @@ SkinSpec.PhaseDisplayDoneButton.Desc=Appearance of the Done button in the phase 
 SkinSpec.PhaseDisplayButton.Text=Phase Display Buttons
 SkinSpec.PhaseDisplayButton.Desc=Appearance of buttons in the phase display button panel (besides Done button).
 SkinSpec.UnitDisplay.Text=UnitDisplay
+
 SkinSpec.UnitDisplay.Desc=Controls the appearance of the unit display.
