--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -14,6 +14,7 @@ v0.41.16-git
 + PR #61: Extract named unit nicknames and (when present) display them
 + PR #65: Tilesets can use an 'include' keyword
 + PR #68: Ultra Rubble terrain level missing +2 movement cost
++ Issue #63: ASF free facing changes incorrect on ground maps
 
 
 v0.41.15 (2016-02-21 14:15 UTC)
