--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -509,6 +509,8 @@ PilotOptionsInfo.option.melee_master.displayableName=Melee Master (aToW)
 PilotOptionsInfo.option.melee_master.description=Enables the unit to do one additional kick, punch, or club attack on the same opponent.
 PilotOptionsInfo.option.tm_forest_ranger.displayableName=Terrain Master [Forest Ranger] (aToW)
 PilotOptionsInfo.option.tm_forest_ranger.description=Movement in woods or jungle costs 1 less MP.\nUsing walk/cruise MP while in woods/jungle gives +1 BTH when being attacked
+PilotOptionsInfo.option.tm_swamp_beast.displayableName=Terrain Master [Swamp Beast] (aToW)
+PilotOptionsInfo.option.tm_swamp_beast.description=Movement in mud or swamp costs 1 less MP.\nUsing run/flank MP while in mud/swamp gives +1 BTH when being attacked
 PilotOptionsInfo.option.multi_tasker.displayableName=Multi-Tasker (aToW)
 PilotOptionsInfo.option.multi_tasker.description=Secondary target modifiers are reduced by one.
 PilotOptionsInfo.option.oblique_attacker.displayableName=Oblique Attacker (aToW)
