SPA: Terrain Master [Mountaineer]

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -511,6 +511,8 @@ PilotOptionsInfo.option.tm_forest_ranger.displayableName=Terrain Master [Forest 
 PilotOptionsInfo.option.tm_forest_ranger.description=Movement in woods or jungle costs 1 less MP.\nUsing walk/cruise MP while in woods/jungle gives +1 BTH when being attacked
 PilotOptionsInfo.option.tm_swamp_beast.displayableName=Terrain Master [Swamp Beast] (aToW)
 PilotOptionsInfo.option.tm_swamp_beast.description=Movement in mud or swamp costs 1 less MP.\nUsing run/flank MP while in mud/swamp gives +1 BTH when being attacked
+PilotOptionsInfo.option.tm_mountaineer.displayableName=Terrain Master [Mountaineer] (aToW)
+PilotOptionsInfo.option.tm_mountaineer.description=Movement in rubble or rough cost 1 less MP and elevation changes also cost 1 MP less.\nThe mountaineer also recieves a -1 to PSR checks for the given terrain.
 PilotOptionsInfo.option.multi_tasker.displayableName=Multi-Tasker (aToW)
 PilotOptionsInfo.option.multi_tasker.description=Secondary target modifiers are reduced by one.
 PilotOptionsInfo.option.oblique_attacker.displayableName=Oblique Attacker (aToW)
