--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -513,6 +513,8 @@ PilotOptionsInfo.option.tm_swamp_beast.displayableName=Terrain Master [Swamp Bea
 PilotOptionsInfo.option.tm_swamp_beast.description=Movement in mud or swamp costs 1 less MP.\nUsing run/flank MP while in mud/swamp gives +1 BTH when being attacked
 PilotOptionsInfo.option.tm_mountaineer.displayableName=Terrain Master [Mountaineer] (aToW)
 PilotOptionsInfo.option.tm_mountaineer.description=Movement in rubble or rough cost 1 less MP and elevation changes also cost 1 MP less.\nThe mountaineer also recieves a -1 to PSR checks for the given terrain.
+PilotOptionsInfo.option.tm_nightwalker.displayableName=Terrain Master [Nightwalker] (aToW)
+PilotOptionsInfo.option.tm_nightwalker.description=No movement penalty for lighting conditions when using walking/cruising speed and -1MP when using Run/Flank
 PilotOptionsInfo.option.tm_frogman.displayableName=Terrain Master [Frogman] (aToW)
 PilotOptionsInfo.option.tm_frogman.description=Movement in depth 2 or greater water costs 1 MP less. Also granted -1 to all PSR checks (including physicals) as well as -2 to Crush Depth checks.
 PilotOptionsInfo.option.multi_tasker.displayableName=Multi-Tasker (aToW)
