Adding Simplex-based random landscape generator

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1905,7 +1905,7 @@ RandomMapDialog.woodsCombo.toolTip=Frequency and size of forests along with the 
 RandomMapDialog.lakesCombo.toolTip=Frequency and size of bodies of water, not counting rivers.  Also affects the chance of deep water.
 RandomMapDialog.riversCombo.toolTip=Chance to have a single river running across the map.
 RandomMapDialog.iceCombo.toolTip=Frequency and size of ice patches.
-RandomMapDialog.elevationAlgorithmField.toolTip=Which landscape generation Algortihm to use. 0 = rolling hills, 1 = steeper hills, 2 = mix of both.
+RandomMapDialog.elevationAlgorithmField.toolTip=Which landscape generation algorithm to use. 0 = rolling hills, 1 = steeper hills, 2 = mix of both, 3 = random.
 RandomMapDialog.hillinessField.toolTip=How frequent hills should be (0-99).
 RandomMapDialog.elevationRangeField.toolTip=Maximum difference between highest elevation and lowest sink.
 RandomMapDialog.elevationCliffsField.toolTip=Chance to change a steep slope into a cliff.
