--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -18,7 +18,8 @@ v0.41.16-git
 + Data: New Sprites and Unit Fixes (Thanks Greekfire)
 + PR #87: Adding Simplex-based random landscape generator
 + PR #50: Shadows (optimizations, new effects for low-light levels)
-
++ Fixing MML Issue #6 - Wrong damage for Enhanced ER PPC  (#6)
++ Data New Sprites.
 
 v0.41.15 (2016-02-21 14:15 UTC)
 + Issue #19: doTryUnstuck Error
