--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -23,6 +23,7 @@ v0.41.16-git
 + Issue #81: Grappling a 'mech involved in a Grapple may cause hang
 + Issue #80: Flare Rounds not Illuminating Targets for Visual Detection
 + Bug: Floor deploy dialog for Infantry in buildings could select wrong floor
++ Bug: Landed dropships were allowed to hang off the edge of the board
 
 v0.41.15 (2016-02-21 14:15 UTC)
 + Issue #19: doTryUnstuck Error
