--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -26,6 +26,11 @@ v0.41.16-git
 + Bug: Landed dropships were allowed to hang off the edge of the board
 + Issue #82: Dropship Deployment Overlapping
 + PR #96/Issue #98: Fixed Industrial TSM calculation
++ PR #100: Minimap unit icons made more visible
++ Bug/PR #89: Keyboard scrolling made smoother by reducing calls to the minimap
++ PR #87: On Windows, RMB scrolling interacts better with the context menu
++ PR #88: Board soft centering to units
++ PR #77: Adjustments to Entity Sprites (transparency, coloring)   
 
 
 v0.41.15 (2016-02-21 14:15 UTC)
