--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -547,6 +547,8 @@ PilotOptionsInfo.option.cluster_hitter.displayableName=Cluster Hitter (AToW)
 PilotOptionsInfo.option.cluster_hitter.description=A pilot with this ability gets a +1 to the cluster hit table
 PilotOptionsInfo.option.cluster_master.displayableName=Cluster Master (Unofficial)
 PilotOptionsInfo.option.cluster_master.description=A pilot with this ability gets a +2 to the cluster hit table
+PilotOptionsInfo.option.golden_goose.displayableName=Golden Goose (aToW)
+PilotOptionsInfo.option.golden_goose.description=Ground attacks are easier. Strike gives -1 BTH and Bombing is -2
 PilotOptionsInfo.option.sandblaster.displayableName=Sandblaster (AToW)
 PilotOptionsInfo.option.sandblaster.description=A pilot with this ability gets a +4, +3, or +2 to the cluster table\nat short, medium, or long/extended range, respectively, but only with a specialized weapon.
 PilotOptionsInfo.option.ei_implant.displayableName=EI implant (Legacy)
