--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -35,6 +35,7 @@ v0.41.16-git
 + Issue #106 - Fixing name generator resource loading derp
 + Data: New Sprites
 + PR #109: StratOps Symbols for the Minimap
++ Bug [#3399]: No Quicksand Image
 
 v0.41.15 (2016-02-21 14:15 UTC)
 + Issue #19: doTryUnstuck Error
