--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -36,6 +36,7 @@ v0.41.16-git
 + Data: New Sprites
 + PR #109: StratOps Symbols for the Minimap
 + Bug [#3399]: No Quicksand Image
++ Issue #92: Canon units being flagged as invalid designs (temp workaround)
 
 v0.41.15 (2016-02-21 14:15 UTC)
 + Issue #19: doTryUnstuck Error
