SPA: Golden Goose (Scatter bonus) Adds bonus bomb scatter reduction. Distance is MoF -2 which allows a near miss to become a hit.

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -548,7 +548,7 @@ PilotOptionsInfo.option.cluster_hitter.description=A pilot with this ability get
 PilotOptionsInfo.option.cluster_master.displayableName=Cluster Master (Unofficial)
 PilotOptionsInfo.option.cluster_master.description=A pilot with this ability gets a +2 to the cluster hit table
 PilotOptionsInfo.option.golden_goose.displayableName=Golden Goose (aToW)
-PilotOptionsInfo.option.golden_goose.description=Ground attacks are easier. Strike gives -1 BTH and Bombing is -2
+PilotOptionsInfo.option.golden_goose.description=Ground attacks are easier. Strike gives -1 BTH and Bombing is -2. Also decreases scatter distance by 2 hexes
 PilotOptionsInfo.option.ground_hugger.displayableName=Ground Hugger (aToW)
 PilotOptionsInfo.option.ground_hugger.description=Ground attacks are easier. Strike and Strafing gives -1 BTH
 PilotOptionsInfo.option.shaky_stick.displayableName=Shaky Stick (aToW)
