SPA: Foot Cavalry

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -525,6 +525,8 @@ PilotOptionsInfo.option.aptitude_gunnery.displayableName=Natural Aptitude, Gunne
 PilotOptionsInfo.option.aptitude_gunnery.description=Roll 3d6 and take the best two for gunnery checks
 PilotOptionsInfo.option.aptitude_piloting.displayableName=Natural Aptitude, Piloting (aToW)
 PilotOptionsInfo.option.aptitude_piloting.description=Roll 3d6 and take the best two for piloting checks
+PilotOptionsInfo.option.foot_cav.displayableName=Foot Cavalry (aToW)
+PilotOptionsInfo.option.foot_cav.description=Foot Infantry gain 1 extra MP and allows for foot infantry to move and shoot when using two support weapons.
 PilotOptionsInfo.option.gunnery_laser.displayableName=Gunnery/Energy (Unofficial)
 PilotOptionsInfo.option.gunnery_laser.description=NOTE: This is a unofficial rule.\nPilot gets a -1 to-hit bonus on all energy-based weapons (Laser,\nPPC,\nand Flamer).
 PilotOptionsInfo.option.gunnery_missile.displayableName=Gunnery/Missile (Unofficial)
