+ Bug: Entity tooltip could have incorrect movement mod with TO standing still
The i18n entry for no movement was presuming a TMM of 0.  This isn't the case
with the TO standing still optional rule on.  I just changed the i18n entry to
take a parameter for the movement modifier, and set the value to what is
returned by Compute.getTargetMovementModifier.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -209,7 +209,7 @@ BoardView1.Tooltip.Heat=<FONT COLOR=#FF0000><I>Heat: {0}</I></FONT>
 BoardView1.Tooltip.Jammed=<FONT COLOR=#FF0000>Jammed by Enemy ECM</FONT>
 BoardView1.Tooltip.Clan=C-
 BoardView1.Tooltip.NotYetMoved=<FONT COLOR=#400040><I>Has not yet moved</I></FONT>
-BoardView1.Tooltip.NoMove=<FONT COLOR=#400040><I>Did not move (Mod: 0)</I></FONT>
+BoardView1.Tooltip.NoMove=<FONT COLOR=#400040><I>Did not move (Mod: {0})</I></FONT>
 BoardView1.Tooltip.Arrow=<FONT COLOR=#{0}>&#10145; </FONT>
 BoardView1.Tooltip.MovementF=<FONT COLOR=#400040><I>{0} {1} (Mod: {2})</I></FONT>
 BoardView1.Tooltip.Weapon=&nbsp;{1}{2}
