Urban Guerrillas can now call upon local support Also updated targeted bonus with additional terrain types per ASC Local support call not 100% bug free and still a WIP

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1340,6 +1340,7 @@ MovementDisplay.butRoll=Roll
 MovementDisplay.MoveAccelerate=Accelerate
 MovementDisplay.MoveAccNext=Acc Next
 MovementDisplay.moveBackUp=Back Up
+MovementDisplay.moveCallSuport=Call Support
 MovementDisplay.moveCharge=Charge
 MovementDisplay.moveClear=Clear mines
 MovementDisplay.moveClimbMode=Climb Mode
