--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -528,7 +528,7 @@ PilotOptionsInfo.option.aptitude_piloting.description=Roll 3d6 and take the best
 PilotOptionsInfo.option.foot_cav.displayableName=Foot Cavalry (aToW)
 PilotOptionsInfo.option.foot_cav.description=Foot Infantry gain 1 extra MP and allows for foot infantry to move and shoot when using two support weapons.
 PilotOptionsInfo.option.urban_guerrilla.displayableName=Urban Guerrilla (aToW)
-PilotOptionsInfo.option.urban_guerrilla.description=Urban Guerrilla gives infantry a better chance of survival in urban or suburban environments (+1 to be hit)\nIt also keeps them from taking double damage in the open when in pavement or road terrain types.
+PilotOptionsInfo.option.urban_guerrilla.description=Urban Guerrilla gives infantry a better chance of survival in urban or suburban environments (+1 to be hit)\nIt also keeps them from taking double damage in the open when in pavement or road terrain types.\nFinally, urban guerrillas can call on local support once per scenario.
 PilotOptionsInfo.option.gunnery_laser.displayableName=Gunnery/Energy (Unofficial)
 PilotOptionsInfo.option.gunnery_laser.description=NOTE: This is a unofficial rule.\nPilot gets a -1 to-hit bonus on all energy-based weapons (Laser,\nPPC,\nand Flamer).
 PilotOptionsInfo.option.gunnery_missile.displayableName=Gunnery/Missile (Unofficial)
