SPA: Eagle's Eyes

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -495,6 +495,8 @@ GameOptionsInfo.option.no_forced_primary_targets.description=If selected the Tot
 PilotOptionsInfo.group.adv.displayableName=Advantages
 PilotOptionsInfo.option.dodge_maneuver.displayableName= Dodge (MaxTech)
 PilotOptionsInfo.option.dodge_maneuver.description=Enables the unit to make a dodge maneuver instead of a physical attack.\nThis maneuver adds +2 to the BTH to physical attacks against the unit.\nNOTE: The dodge maneuver is declared during the weapons phase.\nNote: This ability is only used for BattleMechs.
+PilotOptionsInfo.option.eagle_eyes.displayableName= Eagle's Eyes (aToW)
+PilotOptionsInfo.option.eagle_eyes.description= Acts as an active probe or extends range of existing active probe. Also makes avoiding minefields easier
 PilotOptionsInfo.option.hot_dog.displayableName= Hot Dog (aToW)
 PilotOptionsInfo.option.hot_dog.description= Reduce heat-related target rolls (e.g ammo, damage, shutdown) by 1.
 PilotOptionsInfo.option.jumping_jack.displayableName= Jumping Jack (aToW)
