History.txt - warning about unit cache rebuild

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -2,6 +2,8 @@ VERSION HISTORY:
 ----------------
 v0.41.18-git
 + PR #154: Replacing all internal mass and tonnage related variables with doubles
+           WARNING: This means that old unit caches will cause errors.
+           Delete them and let MegaMek rebuild!
 + PR #155: Adding the possibility to load parts of image (sprite sheets/texture atlases)
 + PR #122: Updating coordinates hashing code ("nice" random distribution of hex images)
 
