+ Issue #163: NPE in Compute.canCompleteNodePath

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -10,6 +10,7 @@ v0.41.18-git
 + Data: Lots of Unit Fixes (Thanks Clavius1 and Sartis for the research)
 + Issue #158 Missing RATs From FM Warden Clans (Thanks to xStormforgex)
 + Issue #162: "The armor panel is null." warning during deployment phase
++ Issue #163: NPE in Compute.canCompleteNodePath
 
 v0.41.17 (2016-04-16 00:30 UTC)
 + Data: New Sprites and Unit Date Fixes.
