Updated history.txt for bug [#4578]

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -18,6 +18,7 @@ v0.41.18-git
 + Inconsistencies between Server.processMovement and SharedUtility for moving
     backwards over an elevation change (which could lead to getting a nag when
     a PSR isn't necessary)
++ Bug [#4578]: Quirks need a way to distinguish unit type
 
 v0.41.17 (2016-04-16 00:30 UTC)
 + Data: New Sprites and Unit Date Fixes.
