+ Fixed #173: Reorder of include lines in tilesets

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.41.18-git
     backwards over an elevation change (which could lead to getting a nag when
     a PSR isn't necessary)
 + Bug [#4578]: Quirks need a way to distinguish unit type
++ Fixed #173: Reorder of include lines in tilesets
 
 v0.41.17 (2016-04-16 00:30 UTC)
 + Data: New Sprites and Unit Date Fixes.
