--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -23,6 +23,7 @@ v0.41.18-git
 + Fixed #179: PSR for jumping into ultra heavy woods
 + Data: New Sprites, Unit Fixes, and Quirk additions
 + Issue #166 - RATs From Interstellar Expeditions.
++ Fixed #159: Added bw_atmospheric.tileset
 
 v0.41.17 (2016-04-16 00:30 UTC)
 + Data: New Sprites and Unit Date Fixes.
