+ Fixed #168: Fires in low light battles don't reveal enemy units
Conflicts:
	megamek/src/megamek/client/ui/swing/boardview/FovHighlightingAndDarkening.java
	megamek/src/megamek/common/Compute.java
	megamek/src/megamek/common/Game.java

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -94,6 +94,7 @@ v0.41.15 (2016-02-21 14:15 UTC)
 + Bug: Custom saved weapon quirks used wrong weapon name
 + Feature: Added ambient-occlusion like shadows, see client settings graphics
 + Issue #32: Hot Load LRMs check box will not stay checked
++ Fixed #168: Fires in low light battles don't reveal enemy units
 
 v0.41.14 (2016-02-02 13:10 UTC)
 + Data New Sprites/Various RAT and Unit Fixes.
