--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -36,6 +36,8 @@ v0.41.18-git
 + Issue #185: Skins added by BLOODWOLF
 + Data: New Sprites and a couple of quirk fixes.
 + Issue #129: Artillery Scatter should be based on MoF for distance and not d6
++ Issue #190: Artillery cannons generate indirect fire artillery images and
+    popup tooltip
 
 
 v0.41.17 (2016-04-16 00:30 UTC)
