--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -38,6 +38,7 @@ v0.41.18-git
 + Issue #129: Artillery Scatter should be based on MoF for distance and not d6
 + Issue #190: Artillery cannons generate indirect fire artillery images and
     popup tooltip
++ Issue #101: Princess NPE in PathEnumerator.adjustPathForBidge
 
 
 v0.41.17 (2016-04-16 00:30 UTC)
