--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -516,7 +516,7 @@ PilotOptionsInfo.option.pain_resistance.description=When making consciousness ro
 PilotOptionsInfo.option.sniper.displayableName= Sniper (aToW)
 PilotOptionsInfo.option.sniper.description=Range penalties are halved.
 PilotOptionsInfo.option.forward_observer.displayableName= Forward Observer (aToW)
-PilotOptionsInfo.option.forward_observer.description=Improves the accuracy of your artillery
+PilotOptionsInfo.option.forward_observer.description=Improves the accuracy of your artillery. Fire Adjustment gets a -2 modifier. Spotting gets an additional -1 tohit modifier for each point of gunnery below 4.
 PilotOptionsInfo.option.tactical_genius.displayableName=Tactical Genius (aToW)
 PilotOptionsInfo.option.tactical_genius.description=A pilot who has a Tactical Genius may reroll their initiative once per turn.\n The second roll must be accepted.\nNote: Only one Tactical Genius may be utilized per team.
 PilotOptionsInfo.option.weapon_specialist.displayableName=Weapon Specialist (aToW)
