--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -40,6 +40,7 @@ v0.41.18-git
     popup tooltip
 + Issue #101: Princess NPE in PathEnumerator.adjustPathForBidge
 + Feature: Foot Calvary SPA
++ Issue #207: Bot refuses to deploy because of NPE
 
 
 v0.41.17 (2016-04-16 00:30 UTC)
