+ Fixes #197: Sort weapons by firing arc

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -43,6 +43,7 @@ v0.41.18-git
 + Issue #101: Added on board check to Precognition.run()
 + Issue #211: Saving in the Arty Autohit phase breaks the save
 + Issue #207: Bot refuses to deploy because of NPE
++ Issue #197: Sort weapons by firing arc
 
 
 v0.41.17 (2016-04-16 00:30 UTC)
