--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1122,6 +1122,7 @@ MechDisplay.Variable=Variable
 MechDisplay.WasAutomaticlyShutDown=Was automaticly shut down\n
 MechDisplay.WeaponSortOrder.label=Weapon Order:
 MechDisplay.WeaponSortOrder.DEFAULT=Default
+MechDisplay.WeaponSortOrder.ARC=Weapon Arc
 MechDisplay.WeaponSortOrder.RANGE_LH=Range (Low-High)
 MechDisplay.WeaponSortOrder.RANGE_HL=Range (High-Low)
 MechDisplay.WeaponSortOrder.DAMAGE_LH=Damage (Low-High)
