--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -44,6 +44,7 @@ v0.41.18-git
 + Issue #211: Saving in the Arty Autohit phase breaks the save
 + Issue #207: Bot refuses to deploy because of NPE
 + Issue #197: Sort weapons by firing arc
++ Issue #194: Request: Mass Individual Camo
 
 
 v0.41.17 (2016-04-16 00:30 UTC)
