--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -556,7 +556,7 @@ PilotOptionsInfo.option.cluster_hitter.description=A pilot with this ability get
 PilotOptionsInfo.option.cluster_master.displayableName=Cluster Master (Unofficial)
 PilotOptionsInfo.option.cluster_master.description=A pilot with this ability gets a +2 to the cluster hit table
 PilotOptionsInfo.option.golden_goose.displayableName=Golden Goose (aToW)
-PilotOptionsInfo.option.golden_goose.description=Ground attacks are easier. Strike gives -1 BTH and Bombing is -2. Bombing also gets -2 to scatter
+PilotOptionsInfo.option.golden_goose.description=Ground attacks are easier. Strike gives -1 BTH and Bombing is -2. Also decreases scatter distance by 2 hexes
 PilotOptionsInfo.option.sandblaster.displayableName=Sandblaster (AToW)
 PilotOptionsInfo.option.sandblaster.description=A pilot with this ability gets a +4, +3, or +2 to the cluster table\nat short, medium, or long/extended range, respectively, but only with a specialized weapon.
 PilotOptionsInfo.option.ei_implant.displayableName=EI implant (Legacy)
