--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -513,6 +513,8 @@ PilotOptionsInfo.option.multi_tasker.displayableName=Multi-Tasker (aToW)
 PilotOptionsInfo.option.multi_tasker.description=Secondary target modifiers are reduced by one.
 PilotOptionsInfo.option.oblique_attacker.displayableName=Oblique Attacker (aToW)
 PilotOptionsInfo.option.oblique_attacker.description=The penalty for indirect fire is reduced by one.
+PilotOptionsInfo.option.oblique_artillery.displayableName=Oblique Artilleryman (aToW)
+PilotOptionsInfo.option.oblique_artillery.description=Reduces scatter distance by two hexes.
 PilotOptionsInfo.option.pain_resistance.displayableName=Pain Resistance (MaxTech)
 PilotOptionsInfo.option.pain_resistance.description=When making consciousness rolls,\n1 is added to all rolls.\nAlso,\ndamage received from ammo explosions is reduced to 1.\nNote: This ability is only used for BattleMechs.
 PilotOptionsInfo.option.sniper.displayableName= Sniper (aToW)
