--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -47,6 +47,8 @@ v0.41.18-git
 + Issue #194: Request: Mass Individual Camo
 + Issue #214: BA get danger warning when jumping into heavy woods with
     unofficial rule
++ SPA: Golden Goose #227
++ New Sprites
 
 
 v0.41.17 (2016-04-16 00:30 UTC)
