--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,6 +1,7 @@
 VERSION HISTORY:
 ----------------
 v0.41.19-git
++ Issue #233: NPE Displaying Client Options when no skins present
 
 
 v0.41.18 (2016-04-16 19:30 UTC)
