--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -4,6 +4,7 @@ v0.41.19-git
 + Issue #233: NPE Displaying Client Options when no skins present
 + Issue #21: SPAs and Unit Quirks not displaying after loading saved game
 + Issue #208: Incorrect color when reversing a mech with lateral shifts
++ Issue #224: Backup MP cost possibly incorrect when mech is prone
 
 v0.41.18 (2016-04-16 19:30 UTC)
 + PR #154: Replacing all internal mass and tonnage related variables with doubles
