--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -9,6 +9,7 @@ v0.41.19-git
 + Issue #182: For display, overlapping friendly ECM/ECCM could cancel out
 + Issue #232: Bloodwolf IS House Skins added
 + Issue #210: VTOLs incorrectly able to lateral shift, can shift and flank
++ Issue #220: TO vehicle crew rule counts # of targets incorrectly
 
 v0.41.18 (2016-05-26 19:30 UTC)
 + PR #154: Replacing all internal mass and tonnage related variables with doubles
