--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -13,6 +13,10 @@ v0.41.19-git
 + PR #222 & # #229: New SPAs: Shaky Stick and Oblique Artilleryman
 + Issue #176: Real Blind Drop: unit customization messages reveal how many units
     a player has
++ Issue #234: Mechbuster & Protector CF's Not Using Their Images
++ Issue #230: Axel Heavy Tank IIC (XL) has incorrect name and stats
++ New Maps - Thanks Razorback (via Facebook)
++ New Sprites.
 
 v0.41.18 (2016-05-26 19:30 UTC)
 + PR #154: Replacing all internal mass and tonnage related variables with doubles
