+ Bug: MiniMap selected unit highlighting persists after turn ends
This is because the MiniMap highlighting is based upon
ClientGUI.selectedEntityNum, which gets set in the various
StatusBarPhaseDisplay implementations (aka FiringDisplay, MovementDisplay),
in the beingMyTurn() method.  However, it is never cleared.  I added code
in the endMyTurn() method to clear this value.  It appears to me that it was
intended to be cleared but never was because it had no effect, until now.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -18,6 +18,7 @@ v0.41.19-git
 + New Maps - Thanks Razorback (via Facebook)
 + New Sprites.
 + Issue #156: Graphical To-Hit Modifiers ('firing solutions') in Indirect Phase
++ Bug: MiniMap selected unit highlighting persists after turn ends
 
 v0.41.18 (2016-05-26 19:30 UTC)
 + PR #154: Replacing all internal mass and tonnage related variables with doubles
