--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -20,6 +20,7 @@ v0.41.19-git
 + Issue #156: Graphical To-Hit Modifiers ('firing solutions') in Indirect Phase
 + Bug: MiniMap selected unit highlighting persists after turn ends
 + Issue #149: IS Small Laser firing at LOS Range
++ Issue #152: MGs, Flamers, AMS firing at LOS Range
 
 v0.41.18 (2016-05-26 19:30 UTC)
 + PR #154: Replacing all internal mass and tonnage related variables with doubles
